hide scrollbar when not needed Fixes #53

--- a/source/style.css
+++ b/source/style.css
@@ -474,6 +474,6 @@ body.visualization-in-focus #vertical-align {
 }
 
 #controls-pane #controls {
-	overflow-y: scroll;
+	overflow-y: auto;
 	height: 100%;
 }
